--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@
 .App-intro {
   font-size: large;
 }
+.card-container {
+  margin: 0 20px 20px 20px;
+}
+.card-container .card-height {
+  min-height: 150px;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
