--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,18 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+#videoWrapper {
+  width: 560px;
+  height: 315px;
+  border-radius: 15px;
+  overflow: hidden;
+  position: relative;
+  margin: 10px auto;
+}
+
+#video {
+  width: 100%;
+  height: 100%;
+  frameBorder: 0;
+}
