--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,12 @@
   margin: 10px auto;
 }
 
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  #videoWrapper {
+    width: 100%;
+  }
+}
+
 #video {
   width: 100%;
   height: 100%;
