--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: RequiemFine;
+  src: url(../fonts/requiem/RequiemFine-HTF-Roman.otf);
+}
+
 .App {
   text-align: center;
 }
